[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/misc/nelson's.png" type="Texture" id=1]
[ext_resource path="res://assets/misc/Ratocapa.png" type="Texture" id=2]
[ext_resource path="res://misc/static_gif.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/menu.gd" type="Script" id=4]
[ext_resource path="res://assets/misc/NewG.png" type="Texture" id=5]
[ext_resource path="res://assets/misc/continuar.webp" type="Texture" id=6]
[ext_resource path="res://assets/noitadas/Noitada_2.webp" type="Texture" id=7]
[ext_resource path="res://assets/noitadas/Noitada_3.webp" type="Texture" id=8]
[ext_resource path="res://assets/noitadas/Noitada_6.webp" type="Texture" id=9]
[ext_resource path="res://assets/noitadas/Noitada_5.webp" type="Texture" id=10]
[ext_resource path="res://assets/noitadas/Noitada_4.webp" type="Texture" id=11]

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 8 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "night_02"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 7 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "night_03"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 8 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "night_04"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 11 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "night_05"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 10 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "night_06"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 9 ) ]
}

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "change_scene_to_cutscene"
} ]
}

[node name="menu" type="Control"]
script = ExtResource( 4 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 480, 271 )
scale = Vector2( 1.92, 1.92 )
texture = ExtResource( 2 )

[node name="title" type="Sprite" parent="."]
position = Vector2( 174, 151 )
texture = ExtResource( 1 )

[node name="static_gif" parent="." instance=ExtResource( 3 )]
position = Vector2( 491, 273 )

[node name="new_game" type="Button" parent="."]
margin_left = 29.0
margin_top = 323.0
margin_right = 328.0
margin_bottom = 376.0
focus_mode = 0
mouse_default_cursor_shape = 2
enabled_focus_mode = 0
icon = ExtResource( 5 )
flat = true

[node name="continue" type="Button" parent="."]
margin_left = 17.0
margin_top = 376.0
margin_right = 375.0
margin_bottom = 459.0
rect_scale = Vector2( 0.9, 0.9 )
focus_mode = 0
mouse_default_cursor_shape = 2
enabled_focus_mode = 0
icon = ExtResource( 6 )
flat = true

[node name="night_sprite" type="Sprite" parent="continue"]
position = Vector2( 433.333, 48.8889 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )

[node name="anim" type="AnimationPlayer" parent="continue/night_sprite"]
anims/RESET = SubResource( 4 )
anims/night_02 = SubResource( 3 )
anims/night_03 = SubResource( 5 )
anims/night_04 = SubResource( 6 )
anims/night_05 = SubResource( 7 )
anims/night_06 = SubResource( 8 )

[node name="static_gif" parent="continue/night_sprite" instance=ExtResource( 3 )]
position = Vector2( -328.889, -14.4444 )
scale = Vector2( 1.39506, 0.217593 )

[node name="custom_night" type="Button" parent="."]
margin_left = 32.0
margin_top = 453.0
margin_right = 331.0
margin_bottom = 506.0
focus_mode = 0
mouse_default_cursor_shape = 2
enabled_focus_mode = 0
text = "NOITE EXTRA"

[node name="anim" type="AnimationPlayer" parent="."]
autoplay = "fade_in"
anims/RESET = SubResource( 1 )
anims/fade_in = SubResource( 9 )
anims/fade_out = SubResource( 2 )

[node name="reset" type="Button" parent="."]
margin_left = 812.0
margin_top = 466.0
margin_right = 960.0
margin_bottom = 535.0
text = "RESETAR"

[connection signal="pressed" from="new_game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="custom_night" to="." method="_on_custom_night_pressed"]
[connection signal="pressed" from="reset" to="." method="_on_reset_pressed"]
